--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 
 # Created by https://www.gitignore.io/api/linux,macos,laravel,netbeans,phpstorm,sublimetext
+dados/csv
+
 
 ### Laravel ###
 vendor/
@@ -66,6 +68,7 @@ Temporary Items
 .apdisk
 
 ### NetBeans ###
+nbproject/
 nbproject/private/
 build/
 nbbuild/
