--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,14 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "consoletvs/charts": "4.*",
+        "consoletvs/support": "^2.1.2",
+        "cornford/googlmapper": "2.*",
+        "illuminate/support": "5.*",
+        "jenssegers/date": "v3.*",
+        "jlawrence/eos": "3.*",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
-	"cornford/googlmapper": "2.*"
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
