--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-beta"
+    "bootstrap": "^4.0.0-beta",
+    "select2": "^4.0.3",
+    "select2-bootstrap-theme": "0.1.0-beta.10"
   }
 }
